// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.disabled"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={300}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={300}
    style={
      [
        {
          "color": "hsla(211, 20%, 52%, 0.32)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with default properties 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={300}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={300}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with mixed color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={300}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={300}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Supercharge your business with the all‑powerful
     
    <Text
      accessibilityRole="header"
      accessible={true}
      color="interactive.text.information.subtle"
      data-blade-component="heading"
      fontFamily="heading"
      fontSize={300}
      fontStyle="normal"
      fontWeight="semibold"
      lineHeight={300}
      style={
        [
          {
            "color": "hsla(200, 84%, 44%, 1)",
            "fontFamily": "TASA Orbiter Display",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 22,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      Payment Gateway
    </Text>
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with size "large" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.muted"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={500}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={500}
    style={
      [
        {
          "color": "hsla(211, 22%, 56%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 26,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with size "medium" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.muted"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={400}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={400}
    style={
      [
        {
          "color": "hsla(211, 22%, 56%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with size "small" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={300}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={300}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;

exports[`<Heading /> should render Heading with size "small" and contrast "high" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="heading"
    fontFamily="heading"
    fontSize={300}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={300}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "TASA Orbiter Display",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Get Started With Payment Gateway
  </Text>
</View>
`;
